2002-03-30 Aruna P R <aruna.pou@wipro.com>

        Replaced GtkClist and GtkCtree calls with GtkTreeView calls in the files        * actions.c
        * monitor.c
        * logview.h

2002-03-20  Yogeesh MB <yogeeshappa.mathighatta@wipro.com>

	* logview.c :Removed user preference dialog, Patch #57968

2002-03-26 Aruna P R <aruna.pou@wipro.com>

        * monitor.c: Monitor options gives the messages when tried to add more
        than the MON_MAX_NUM_LOGS(4) log files.
        Fixes the problem with Add and Remove button

        * logview.c: made menu items and view items sensitive.
        Added the condition to give the message when tried to open more than
        MAX_NUM_LOGS(10) log files.

        Fix for bugs #75124 & 75074

2002-03-20  Kevin Vandersloot <kfv101@psu.edu>

	* actions.c: Use gtk_text_buffer_set_text. May fix 
	a crash. Also don't cast the textview to a gtkeditable

2002-03-15  Ganesan Sethuraman <ganesan.sethuraman@wipro.com>

       * log_repaint.c: Fixed the display of the status bar when the
       last log file is closed.Fix for bug #74610

2002-03-18  Kevin Vandersloot <kfv101@psu.edu> 

	* logview.c: fix checks for logfiles. Thanks to Aruna Pourohit
	for pointing this out. Realy fixes bug 75125. Also update
	binary name in gnome_init

2002-03-17  Kevin Vandersloot <kfv101@psu.edu>

	* logview.c: fix typo. Fixes bug 75125

2002-03-04  Kevin Vandersloot <kfv101@psu.edu>
	
	* log_repaint.c: show details on double click and 
	select row on single click. Also handle mouse scroll
	events. 

	* logview.c: don't select row on motion events.

2002-02-28  Santhana Krishnan  <santhana.krishnan@wipro.com>

	* logview.c: fixed bug on scroll bars when log view is empty. 

2002-02-21  Bastien Nocera  <hadess@hadess.net>

	* logrtns.c: (isLogFile): don't crash on empty files

2002-02-21  Bastien Nocera  <hadess@hadess.net>

	* actions.c: (edit_action_entry): use non-deprecated calls
	(and the proper ones in fact)