@@ -1,3 +1,7 @@
+2002-03-21 Aruna P R <aruna.pou@wipro.com>
+
+	* logview.c: add session managment to systemlogmoitor
+
 2002-03-30 Aruna P R <aruna.pou@wipro.com>
 
         Replaced GtkClist and GtkCtree calls with GtkTreeView calls in the files        * actions.c
